--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
-  chat-icon="https:&#x2F;&#x2F;miro.medium.com&#x2F;v2&#x2F;1*CwhtgBtYuUvcs8P9oaoaPw.jpeg"
+  chat-icon="https://user-gen-media-assets.s3.amazonaws.com/seedream_images/021ee478-b012-4570-97b0-75d2ac57323d.png"
   intent="WELCOME"
   chat-title="Trip_Planner7"
   agent-id="bc72741d-1a48-4bf9-9ba2-6ed0e30911d2"
